<resources>
    <string name="app_name">Registration page</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="Batch">Batch</string>
    <string name="Year">Year</string>
    <string name="Department">Department</string>
    <string name="id">ID</string>
    <string name="signUp">SIGN UP</string>
    <string name="verify">VERIFY</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="what_to_upload">SELECT ONE</string>

    <string-array name="year">
        <item>--Select Year--</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="batch">
        <item>--Select Batch--</item>
        <item>B1</item>
        <item>B2</item>
        <item>B3</item>
        <item>B4</item>
    </string-array>

    <string-array name="department">
        <item>--Select Department--</item>
        <item>Computer Science</item>
        <item>Electronics</item>
        <item>Electrical</item>
        <item>Chemical</item>
        <item>Civil</item>
        <item>Mechanical</item>
        <item>Metallurgy</item>
        <item>Architecture</item>
    </string-array>

    <string-array name="what_to_upload">
        <item>--Please Select One--</item>
        <item>Upload</item>
        <item>Write</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
